--- a/thesis/Bibliography.bib
+++ b/thesis/Bibliography.bib
@@ -16,6 +16,14 @@
   address                  = {Cambridge, UK},
 }
 
+@Unpublished{baumann-r-2010-07-12-a,
+  title                    = {The Mereotopological Structure of the Brentano Space {--} An Interpretation and Axiomatic Foundation},
+  author                   = {Baumann, Ringo and Herre, Heinrich},
+  note                     = {unpublished manuscript},
+  year                     = {2010},
+  timestamp                = {2010.09.29}
+}
+
 % done: BH
 @Article{baumann-r-2014-171-a,
   title                    = {Axiomatic theories of the ontology of time in {GFO}},
