minor edits in Abstrakt

--- a/thesis/FrontBackmatter/Abstract.tex
+++ b/thesis/FrontBackmatter/Abstract.tex
@@ -6,16 +6,16 @@
 \addcontentsline{toc}{chapter}{Abstrakt}
 %Der Abstrakt soll kurz gehalten werden und dazu dienen, den Leser zum Lesen der kompletten Arbeit zu motivieren. Er ist optional.
 
-General Formal Ontologie (GFO) ist eine Top-Level-Ontologie, die grundlegende Begriffe bereitstellen soll, die für ein breites Anwendungsfeld von Bedeutung sind.
+Die General Formal Ontology (GFO) ist eine Top-Level-Ontologie, die grundlegende Begriffe bereitstellen soll, die für ein breites Anwendungsfeld von Bedeutung sind.
 Die Theorie des Raumes in GFO ist von den Arbeiten des Philosophen Franz Brentano zu Raum, Zeit und Kontinuum inspiriert und heißt deshalb Brentanoraum.
-Die vorliegende Arbeit will einen Beitrag zu einem konstruktiven Konsistenzbeweis für ihre Axiomatisierung $\theoryBS$ leisten.
+Die vorliegende Arbeit will einen Beitrag zu einem konstruktiven Konsistenzbeweis für deren Axiomatisierung $\theoryBS$ leisten.
 
 Dazu wird die Teiltheorie $\theoryBSO$ der ordinären Entitäten des Brentanoraumes eingeführt, die sich von $\theoryBS$ unter anderem dadurch unterscheidet, dass die Existenz der mereologischen Summe eingeschränkt ist.
 Möglicherweise lässt sich also jedes Modell für $\theoryBSO$ durch Abschluss unter Summenbildung zu einem Modell für $\theoryBS$ erweitern.
 
-Für die Theorie $\theoryBSO$ wird eine Interpretation -- die \strukt -- als Kandidat für ein Modell vorgeschlagen.
-Die wesentliche Idee dabei ist, Raumentitäten als Äquivalenzklassen der sogenannten Repräsentanten aufzufassen.
-Um diese Idee mathematisch zu formulieren, werde auch Werkzeuge aus der Topologie benötigt, deren Einführung ein weiterer wichtiger Teil dieser Arbeit ist.
+Für die Theorie $\theoryBSO$ wird eine Interpretation -- die \strukt\ -- als Kandidat für ein Modell vorgeschlagen.
+Die wesentliche Idee dabei ist, Raumentitäten als Äquivalenzklassen sogenannter Repräsentanten aufzufassen.
+Um diese Idee mathematisch zu formulieren, werden auch Werkzeuge aus der Topologie benötigt, deren Einführung ein weiterer wichtiger Teil dieser Arbeit ist.
 
 % Die vorliegende Arbeit besteht im Wesentlichen aus drei Teilen:
 %
