--- a/thesis/classicthesis-config.tex
+++ b/thesis/classicthesis-config.tex
@@ -326,6 +326,7 @@
 \newtheorem{bem}[dfn]{Bem}
 \newtheorem*{erin}{Erinnerung}
 \newtheorem*{bew}{Bew}
+\newtheorem*{bewidee}{Beweisidee}
 
 \mdfdefinestyle{grey}{
     skipabove=5pt,
@@ -386,6 +387,7 @@
 \surroundwithmdframed[style=white]{bem}
 \surroundwithmdframed[style=white]{erin}
 \surroundwithmdframed[style=beweis]{bew}
+\surroundwithmdframed[style=beweis]{bewidee}
 
 
 
