--- a/overview/preamble-overview.tex
+++ b/overview/preamble-overview.tex
@@ -9,7 +9,7 @@
 \usepackage{amsmath,amssymb}
 %\usepackage{fontenc}
 \usepackage{xr} % external references
-\externaldocument{thesis.tex}
+\externaldocument[te_]{../thesis/Chapters/topologie-erweiterung}
 
 \usepackage{fancyhdr}
 \pagestyle{fancy}
