--- a/overview/topologie-erweiterung-overview.tex
+++ b/overview/topologie-erweiterung-overview.tex
@@ -10,52 +10,52 @@ Begriffe, die in dieser Übersicht definiert sind, sind \textit{kursiv} gesetzt,
 
 \section*{Begriffe}
 
-    \paragraph{Abgeschlossenes Inneres eine Menge:} \textsc{Abschluss} ihres \textsc{Kerns} (\ref{def:cooc})
+    \paragraph{Abgeschlossenes Inneres eine Menge:} \textsc{Abschluss} ihres \textsc{Kerns} (\ref{te_def:cooc})
     
-    \paragraph{Äußerer Rand einer Menge:} Ist $A$ eine \textit{einfach offene} Menge und $B$ eine \textit{einfach offen} Menge auf dem \textsc{Rand} von $A$, so ist $p$ ein \textit{äußerer Randpunkt} von $B$, wenn er für jede andere \textit{einfache} Menge $A'$, für die $B$ \textit{einfach offen} auf dem \textsc{Rand} von $A'$ ist auch in der \textsc{Teilraumtopologie} von $\rand A'$ \textsc{Randpunkt} von $B$ wäre. (\ref{def:aeusserer-rand})
+    \paragraph{Äußerer Rand einer Menge:} Ist $A$ eine \textit{einfach offene} Menge und $B$ eine \textit{einfach offen} Menge auf dem \textsc{Rand} von $A$, so ist $p$ ein \textit{äußerer Randpunkt} von $B$, wenn er für jede andere \textit{einfache} Menge $A'$, für die $B$ \textit{einfach offen} auf dem \textsc{Rand} von $A'$ ist auch in der \textsc{Teilraumtopologie} von $\rand A'$ \textsc{Randpunkt} von $B$ wäre. (\ref{te_def:aeusserer-rand})
     
-    \paragraph{Äußerer Rand zweiter Stufe:} Ist $A$ eine \textit{einfach offene} Menge und $B$ eine \textit{einfach offene} Menge auf dem \textsc{Rand} von $A$, $C$ eine \textit{einfach offene} Menge auf dem \textsc{Rand} von $B$, so ist $p$ ein \textit{äußerer Randpunkt zweiter Stufe} von $C$, wenn er für jede andere \textit{einfach offene} Menge $A'$ und für jede andere auf dem \textsc{Rand} von $A'$ \textit{einfach offene} Menge $B'$, für die $C$ \textit{einfach offen} auf dem \textsc{Rand} von $B'$ ist auch in der \textsc{Teilraumtopologie} von $\rand B'$ \textsc{Randpunkt} von $C$ wäre.  (\ref{def:aeusserer-rand-2})
+    \paragraph{Äußerer Rand zweiter Stufe:} Ist $A$ eine \textit{einfach offene} Menge und $B$ eine \textit{einfach offene} Menge auf dem \textsc{Rand} von $A$, $C$ eine \textit{einfach offene} Menge auf dem \textsc{Rand} von $B$, so ist $p$ ein \textit{äußerer Randpunkt zweiter Stufe} von $C$, wenn er für jede andere \textit{einfach offene} Menge $A'$ und für jede andere auf dem \textsc{Rand} von $A'$ \textit{einfach offene} Menge $B'$, für die $C$ \textit{einfach offen} auf dem \textsc{Rand} von $B'$ ist auch in der \textsc{Teilraumtopologie} von $\rand B'$ \textsc{Randpunkt} von $C$ wäre.  (\ref{te_def:aeusserer-rand-2})
 
-    \paragraph{$\co$-Operator:} ordnet jeder Menge den \textsc{Abschluss} ihres \textsc{Kerns} zu (\ref{def:cooc})
+    \paragraph{$\co$-Operator:} ordnet jeder Menge den \textsc{Abschluss} ihres \textsc{Kerns} zu (\ref{te_def:cooc})
     
-    \paragraph{einfache Menge:} \textit{maximaldimensionale} Menge deren Komplement \textit{maximaldimensional} ist (\ref{def:einf})
+    \paragraph{einfache Menge:} \textit{maximaldimensionale} Menge deren Komplement \textit{maximaldimensional} ist (\ref{te_def:einf})
     
-    \paragraph{einfach abgeschlossene Menge:} \textit{einfache} Menge, die \textsc{abgeschlossen} ist (\ref{def:einf})
+    \paragraph{einfach abgeschlossene Menge:} \textit{einfache} Menge, die \textsc{abgeschlossen} ist (\ref{te_def:einf})
     
-    \paragraph{einfach offene Menge:} \textit{einfache Menge}, die \textsc{offen} ist (\ref{def:einf})
+    \paragraph{einfach offene Menge:} \textit{einfache Menge}, die \textsc{offen} ist (\ref{te_def:einf})
     
-    \paragraph{lokale Gleichheit bzgl.\ einer Menge:} Zwei Mengen sind \textit{lokal gleich} bzgl.\ einer dritten Menge, wenn sie \textit{lokal gleich} sind bzgl.\ jeden Punktes dieser Menge. (\ref{def:lok-gleich})
+    \paragraph{lokale Gleichheit bzgl.\ einer Menge:} Zwei Mengen sind \textit{lokal gleich} bzgl.\ einer dritten Menge, wenn sie \textit{lokal gleich} sind bzgl.\ jeden Punktes dieser Menge. (\ref{te_def:lok-gleich})
 
-    \paragraph{lokale Gleichheit bzgl.\ eines Punktes:} Zwei Mengen sind \textit{lokal gleich} bzgl.\ eines Punktes, wenn dieser eine \textsc{offene Umgebung} hat, deren Schnitt mit beiden Mengen übereinstimmt. (\ref{def:lok-gleich})
+    \paragraph{lokale Gleichheit bzgl.\ eines Punktes:} Zwei Mengen sind \textit{lokal gleich} bzgl.\ eines Punktes, wenn dieser eine \textsc{offene Umgebung} hat, deren Schnitt mit beiden Mengen übereinstimmt. (\ref{te_def:lok-gleich})
     
-    \paragraph{innerer Abschluss:} \textsc{Kern} ihres \textsc{Abschlusses} (\ref{def:cooc})
+    \paragraph{innerer Abschluss:} \textsc{Kern} ihres \textsc{Abschlusses} (\ref{te_def:cooc})
     
-    \paragraph{innerer Randpunkt:} \textsc{Randpunkt}, der kein \textit{äußerer Randpunkt} ist (\ref{def:aeusserer-rand}, \ref{def:aeusserer-rand-2})
+    \paragraph{innerer Randpunkt:} \textsc{Randpunkt}, der kein \textit{äußerer Randpunkt} ist (\ref{te_def:aeusserer-rand}, \ref{te_def:aeusserer-rand-2})
     
-    \paragraph{maximaldinemsionale Menge:} Menge, für die für jeden Punkt jede \textsc{offene Umgebung} Punkte aus dem \textsc{Inneren} der Menge enthält  (\ref{def:maxdim})
+    \paragraph{maximaldinemsionale Menge:} Menge, für die für jeden Punkt jede \textsc{offene Umgebung} Punkte aus dem \textsc{Inneren} der Menge enthält  (\ref{te_def:maxdim})
     
-    \paragraph{$\oc$-Operator:} ordnet jeder Menge den \textsc{Kern} ihres \textsc{Abschlusses} zu (\ref{def:cooc})
+    \paragraph{$\oc$-Operator:} ordnet jeder Menge den \textsc{Kern} ihres \textsc{Abschlusses} zu (\ref{te_def:cooc})
     
    
 \section*{Symbole}
 
     Anmerkung: in dem folgenden Symbolen taucht $X$ als Index auf. Falls $X$ ein topologischer Raum ist, dann ist eben diese Topologie gemeint, falls $X$ Teilmenge eines topologischen Raumes ist ohne explizit angegebene eigene Topologie, so ist die Teilraumtopologie auf $X$ gemeint und wenn $X$ eine Metrik ist, so ist die von $X$ induzierte Topologie gemeint. Ist $X$ eine natürliche Zahl $n$, so ist die Standardtopologie im $\R^n$ gemeint.
 
-    \paragraph{$A =_x B$} - \quad $A$ und $B$ sind \textit{lokal gleich} in bzw.\ bzgl.\ $x$  (\ref{def:lok-gleich})
+    \paragraph{$A =_x B$} - \quad $A$ und $B$ sind \textit{lokal gleich} in bzw.\ bzgl.\ $x$  (\ref{te_def:lok-gleich})
 
-    \paragraph{$\co_X(A)$} - \quad $\cl_X(\op_X(A))$ (\ref{def:cooc})
+    \paragraph{$\co_X(A)$} - \quad $\cl_X(\op_X(A))$ (\ref{te_def:cooc})
 
-    \paragraph{$\CO_X$} - \quad Menge der in $X$ \textit{einfach abgeschlossenen} Mengen (\ref{def:einf})
+    \paragraph{$\CO_X$} - \quad Menge der in $X$ \textit{einfach abgeschlossenen} Mengen (\ref{te_def:einf})
 
-    \paragraph{$\delta_X B$} - \quad Menge der \textit{äußeren Randpunkte} von $B$ in $X$ (\ref{def:aeusserer-rand})
+    \paragraph{$\delta_X B$} - \quad Menge der \textit{äußeren Randpunkte} von $B$ in $X$ (\ref{te_def:aeusserer-rand})
     
-    \paragraph{$\delta_X^2 C$} - \quad Menge der \textit{äußeren Randpunkte zweiter Stufe} von $C$ in $X$ (\ref{def:aeusserer-rand})
+    \paragraph{$\delta_X^2 C$} - \quad Menge der \textit{äußeren Randpunkte zweiter Stufe} von $C$ in $X$ (\ref{te_def:aeusserer-rand})
 
-    \paragraph{$\oc_X(A)$} - \quad $\op_X(\cl_X(A))$ (\ref{def:cooc})
+    \paragraph{$\oc_X(A)$} - \quad $\op_X(\cl_X(A))$ (\ref{te_def:cooc})
 
-    \paragraph{$\OC_X$} - \quad Menge der in $X$ \textit{einfach offenen} Mengen (\ref{def:einf})
+    \paragraph{$\OC_X$} - \quad Menge der in $X$ \textit{einfach offenen} Mengen (\ref{te_def:einf})
 
-    \paragraph{$\einf_X$} - \quad Menge der in $X$ \textit{einfachen} Mengen (\ref{def:einf})
+    \paragraph{$\einf_X$} - \quad Menge der in $X$ \textit{einfachen} Mengen (\ref{te_def:einf})
 
 
 % \section*{Begriffe}
