--- a/thesis/FrontBackmatter/Contents.tex
+++ b/thesis/FrontBackmatter/Contents.tex
@@ -36,10 +36,10 @@
     %*******************************************************
     %\phantomsection
     %\addcontentsline{toc}{chapter}{\listtablename}
-    \pdfbookmark[1]{\listtablename}{lot}
-    \listoftables
-
-    \vspace{8ex}
+%     \pdfbookmark[1]{\listtablename}{lot}
+%     \listoftables
+% 
+%     \vspace{8ex}
     % \newpage
 
     %*******************************************************
