--- a/thesis/beweise/bew-bso-struktur.tex
+++ b/thesis/beweise/bew-bso-struktur.tex
@@ -1,6 +1,10 @@
 \section{Zu Kapitel \ref{chap:bso-struktur} (Formale Definition der \strukt)}
 
-\subsection{Zu Satz \ref{satz:spart-trans}}\label{anh:spart-trans}
+\addtocontents{toc}{\protect\setcounter{tocdepth}{0}} % Folgende sections und subsections sollen nicht im Inhaltsverzeichnis erscheinen
+
+\subsection{Zu Abschnitt \ref{sec:analyse}}
+
+\subsubsection{Zu Satz \ref{satz:spart-trans}}\label{anh:spart-trans}
 Zu zeigen ist: Die $\Gspart$-Relation ist transitiv.\\ \ \\
 %
 Da für $\Gdim(x) \neq \Gdim(y)$ gilt $\neg \Gspart(x,y)$ muss die Transitivität ($\Gspart(x,y) \:\land\: \Gspart(y,z) \quad \Rightarrow \quad \Gspart(x,z)$) nur für gleichdimensionale $x$, $y$ und $z$ gezeigt werden.
@@ -28,3 +32,5 @@ Für niederdimensionale Raumentitäten sei hier beispielhaft der Beweis für 2-d
     17 & $\deshalb$ & 18. & $U \cap A_1 = A_1 \cap U_{12} \cap U_{23} = U_{12} \cap A_2 \cap U_{23} = U_{12} \cap U_{23} \cap A_3 = U \cap A_3$ \\
     9,17,18 & $\deshalb$ & 18. & $\lightning$
 \end{longtable}	
+
+\addtocontents{toc}{\protect\setcounter{tocdepth}{2}} % Ab hier geht das iInhaltsverzeichnis wieder bis Tiefe subsection
