--- a/thesis/classicthesis-config.tex
+++ b/thesis/classicthesis-config.tex
@@ -220,6 +220,8 @@
 
 %\usepackage{textcase}
 
+% \usepackage[strict]{changepage} % Anpassung der Seitenränder
+
 
 
 % ********************************************************************
