--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -64,40 +64,43 @@
 % use \cleardoublepage here to avoid problems with pdfbookmark
 \cleardoublepage
 
-\include{Chapters/einleitung}
-%\cleardoublepage
+% \include{Chapters/einleitung}
+% %\cleardoublepage
+% 
+% \part{Die ontologische Seite}
+% 
+% \include{Chapters/bs}
+% 
+% \include{Chapters/bso-grundideen}
+% 
+% \part{Die topologische Seite}
+% 
+% \include{Chapters/topologie-grundlagen}
+% 
+% \include{Chapters/topologie-erweiterung}
+% 
+% %\part{Die \strukt}
+% \part{Zusammenführung}
+% 
+% \include{Chapters/bso-struktur}
+% 
+% \include{Chapters/diskussion}
+% 
+% 
+% % ********************************************************************
+% % Backmatter
+% %*******************************************************
+% 
+% \appendix
+% %\cleardoublepage
+% 
+% \part{Anhang}
+% 
+% \include{Chapters/nebenresultate}
 
-%\part{Die Theorie der ordinären Entitäten des Brentanoraumes}
-\part{Die ontologische Seite}
+% \small
 
-\include{Chapters/bs}
-
-\include{Chapters/bso-grundideen}
-
-\part{Die topologische Seite}
-
-\include{Chapters/topologie-grundlagen}
-
-\include{Chapters/topologie-erweiterung}
-
-%\part{Die \strukt}
-\part{Zusammenführung}
-
-\include{Chapters/bso-struktur}
-
-\include{Chapters/diskussion}
-
-
-% ********************************************************************
-% Backmatter
-%*******************************************************
-
-\appendix
-%\cleardoublepage
-
-\part{Anhang}
-
-\include{Chapters/nebenresultate}
+% \changetext{}{2cm}{-2cm}{}{} % Anpassung der Seitenränder
 
 \include{beweise/bew-topologie-grundlagen}
 \include{beweise/bew-topologie-erweiterung}
