--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -64,39 +64,39 @@
 % use \cleardoublepage here to avoid problems with pdfbookmark
 \cleardoublepage
 
-% \include{Chapters/einleitung}
-% %\cleardoublepage
-% 
-% \part{Die ontologische Seite}
-% 
-% \include{Chapters/bs}
-% 
-% \include{Chapters/bso-grundideen}
-% 
-% \part{Die topologische Seite}
-% 
-% \include{Chapters/topologie-grundlagen}
-% 
-% \include{Chapters/topologie-erweiterung}
-% 
-% %\part{Die \strukt}
-% \part{Zusammenführung}
-% 
-% \include{Chapters/bso-struktur}
-% 
-% \include{Chapters/diskussion}
-% 
-% 
-% % ********************************************************************
-% % Backmatter
-% %*******************************************************
-% 
-% \appendix
-% %\cleardoublepage
-% 
-% \part{Anhang}
-% 
-% \include{Chapters/nebenresultate}
+\include{Chapters/einleitung}
+%\cleardoublepage
+
+\part{Die ontologische Seite}
+
+\include{Chapters/bs}
+
+\include{Chapters/bso-grundideen}
+
+\part{Die topologische Seite}
+
+\include{Chapters/topologie-grundlagen}
+
+\include{Chapters/topologie-erweiterung}
+
+%\part{Die \strukt}
+\part{Zusammenführung}
+
+\include{Chapters/bso-struktur}
+
+\include{Chapters/diskussion}
+
+
+% ********************************************************************
+% Backmatter
+%*******************************************************
+
+\appendix
+%\cleardoublepage
+
+\part{Anhang}
+
+\include{Chapters/nebenresultate}
 
 % \small
 
