formatierung topologie-grundlagen

--- a/thesis/classicthesis-config.tex
+++ b/thesis/classicthesis-config.tex
@@ -342,8 +342,8 @@
     roundcorner=2pt,
     backgroundcolor=black!5,
     hidealllines=true,
-    needspace=60pt,
-		aftersingleframe={\noindent},
+    %needspace=60pt,
+    aftersingleframe={\noindent},
 }
 
 \mdfdefinestyle{white}{
@@ -358,6 +358,7 @@
     roundcorner=2pt,
     %backgroundcolor=black!5,
     %hidealllines=true
+    aftersingleframe={\noindent},
 }
 
 \mdfdefinestyle{beweis}{
@@ -376,6 +377,7 @@
 %     rightline=false
 %     bottomline=false
 %     topline=false
+    aftersingleframe={\noindent},
 }
 
 \surroundwithmdframed[style=grey]{dfn}
