--- a/thesis/classicthesis-config.tex
+++ b/thesis/classicthesis-config.tex
@@ -373,7 +373,7 @@
     roundcorner=2pt,
     %backgroundcolor=black!5,
     %hidealllines=true
-    linecolor=black!10
+    linecolor=black!10,
 %     rightline=false
 %     bottomline=false
 %     topline=false
