edits mainly in Ch.7, minors in Anhang and Bibliography.bib -> FL fully done

--- a/thesis/Bibliography.bib
+++ b/thesis/Bibliography.bib
@@ -19,7 +19,7 @@
 @Unpublished{baumann-r-2010-07-12-a,
   title                    = {The Mereotopological Structure of the Brentano Space {--} An Interpretation and Axiomatic Foundation},
   author                   = {Baumann, Ringo and Herre, Heinrich},
-  note                     = {unpublished manuscript},
+  note                     = {Unpublished Manuscript},
   year                     = {2010},
   timestamp                = {2010.09.29}
 }
@@ -232,7 +232,7 @@
   title     = {Towards GFO 2.0: Architecture, Modules and Applications},
   year      = {2020},
   address   = {Amsterdam},
-  editor    = {Brodaric B, Neuhaus F},
+  editor    = {Brodaric, Boyan and Neuhaus, Fabian},
   pages     = {32--45},
   publisher = {IOS Press},
   volume    = {330},
@@ -595,12 +595,14 @@
 
 @book{jaenich-k-2013--a,
   title={Topologie},
-  author={J{\"a}nich, K.},
-  isbn={9783662105740},
+  author={J{\"a}nich, Klaus},
+  NOisbn={9783662105740},
   series={Springer-Lehrbuch},
-  url={https://books.google.gl/books?id=J9GyBgAAQBAJ},
+  NOurl={https://books.google.gl/books?id=J9GyBgAAQBAJ},
+	doi={10.1007/978-3-662-10574-0},
   year={2013},
-  publisher={Springer Berlin Heidelberg}
+  publisher={Springer},
+	address={Berlin, Heidelberg},
 }
 
 % done: BH
@@ -668,6 +670,7 @@
                Cape Town, South Africa, Sep 17-18},
   publisher = {CEUR Workshop Proceedings},
   volume    = {2205},
+	url       = {http://ceur-ws.org/Vol-2205/paper29_ontocom3.pdf},
 	timestamp = {2021.12.13},
 }
 
@@ -696,9 +699,11 @@
   author={Manetti, M.},
   isbn={9783319169583},
   series={UNITEXT},
-  url={https://books.google.de/books?id=89zyCQAAQBAJ},
+  NOurl={https://books.google.de/books?id=89zyCQAAQBAJ},
+	doi={10.1007/978-3-319-16958-3},
   year={2015},
-  publisher={Springer International Publishing}
+  publisher={Springer International Publishing},
+	address ={Cham},
 }
 
 % done: BH, FL
