--- a/thesis/classicthesis-config.tex
+++ b/thesis/classicthesis-config.tex
@@ -315,17 +315,17 @@
 %***************************************************************************
 \theoremstyle{definition}
 
-\newtheorem{dfn}{Def}[section]
+\newtheorem{dfn}{Def.}[section]
 \newtheorem{nota}[dfn]{Notation}
-\newtheorem{konv}[dfn]{Konvention}
+\newtheorem{konv}[dfn]{Konv.}
 
 \newtheorem{satz}[dfn]{Satz}
-\newtheorem{kor}[dfn]{Kor}
-\newtheorem{hyp}[dfn]{Hyp}
+\newtheorem{kor}[dfn]{Kor.}
+\newtheorem{hyp}[dfn]{Hypothese}
 
-\newtheorem{bsp}[dfn]{Bsp}
+\newtheorem{bsp}[dfn]{Bsp.}
 \newtheorem{gegenbsp}[dfn]{Gegenbeispiel}
-\newtheorem{bem}[dfn]{Bem}
+\newtheorem{bem}[dfn]{Bem.}
 \newtheorem*{erin}{Erinnerung}
 \newtheorem*{bew}{Bew}
 \newtheorem*{bewidee}{Beweisidee}
