--- a/overview/topologie-grundlagen-overview.tex
+++ b/overview/topologie-grundlagen-overview.tex
@@ -42,13 +42,13 @@ Begriffe, die in dieser Übersicht definiert sind, sind \textit{kursiv} gesetzt.
 % 
 % \paragraph{$\cl_X$:} Abschlussoperator auf $X$ (\ref{def:cl})
 % 
-% \paragraph{Kern eine Menge:} Menge ohne ihre Randpunkte (\ref{def:op})
+% \paragraph{Kern eine Menge:} Menge ohne ihre Randpunkte (\ref{def:kern})
 % 
 % \paragraph{Inneres einer Menge:} Kern der Menge
 % 
-% \paragraph{Kernoperator:} Operator, der jeder Menge ihren Kern zuordnet (\ref{def:op})
+% \paragraph{Kernoperator:} Operator, der jeder Menge ihren Kern zuordnet (\ref{def:kern})
 % 
-% \paragraph{$\op_X$:} Kernoperator auf $X$ (\ref{def:op})
+% \paragraph{$\op_X$:} Kernoperator auf $X$ (\ref{def:kern})
 % 
 % \paragraph{Häufungspunkt einer Menge:} Punkt für den in jeder Umgebung andere Punkte aus der Menge liegen (\ref{def:hp})
 % 
@@ -101,11 +101,11 @@ Begriffe, die in dieser Übersicht definiert sind, sind \textit{kursiv} gesetzt.
     
     \paragraph{induzierte Topologie:} \textit{Topologie} auf einem \textit{metrischen Raum} in der Punkte \textit{innere} Punkte einer Menge sind, wenn sie eine \textit{$\varepsilon$-Umgebung} haben, die ganz in der Menge liegt (\ref{def:topMet})
 
-    \paragraph{Inneres einer Menge:} \textit{Kern} der Menge
+    \paragraph{Inneres einer Menge:} \textit{Kern} der Menge (\ref{def:kern})
 
-    \paragraph{Kern eine Menge:} Menge ohne ihre \textit{Randpunkte} (\ref{def:op})
+    \paragraph{Kern eine Menge:} Menge ohne ihre \textit{Randpunkte} (\ref{def:kern})
 
-    \paragraph{Kernoperator:} Operator, der jeder Menge ihren \textit{Kern} zuordnet (\ref{def:op})
+    \paragraph{Kernoperator:} Operator, der jeder Menge ihren \textit{Kern} zuordnet (\ref{def:kern})
 
     \paragraph{offene Menge:} Element einer \textit{Topologie} (\ref{def:top})
     
@@ -160,7 +160,7 @@ Begriffe, die in dieser Übersicht definiert sind, sind \textit{kursiv} gesetzt.
 
     \paragraph{$\offen_X(p)$} - \quad Menge der \textit{offenen Umgebungen} von $p$ in $X$ (\ref{def:umg})
 
-    \paragraph{$\op_X$} - \quad \textit{Kernoperator} auf $X$ (\ref{def:op})
+    \paragraph{$\op_X$} - \quad \textit{Kernoperator} auf $X$ (\ref{def:kern})
 
 
 
@@ -193,7 +193,7 @@ Begriffe, die in dieser Übersicht definiert sind, sind \textit{kursiv} gesetzt.
 %     {def:cl}
 %         Anschlussoperator $\cl_X(A)$
 %         
-%     {def:op}
+%     {def:kern}
 %         Kernoperator $\op_X(A)$
 %         Kern/Inneres
 %         
